save conctact information

--- a/Views/contact_added.cshtml
+++ b/Views/contact_added.cshtml
@@ -2,4 +2,4 @@
 <p>Your name: @Model.GetName(), Your number: @Model.GetNumber() </p>
 
 <p><a href="/">Add another contact</a></p>
-<!-- <p><a href="/view_all_contacts">View current contacts</a></p> -->
+<p><a href="/view_all_contacts">View current contacts</a></p>
