clear contact informaiton

--- a/Views/add_new_contact.cshtml
+++ b/Views/add_new_contact.cshtml
@@ -10,7 +10,7 @@
       <label for="new-name">Add your name</label>
       <input id="new-name" name="new-name" type="text">
       <label for="new-number">Add your number</label>
-      <input id="new-number" name="newNumber" type="text">
+      <input id="new-number" name="newNumber" type="number">
       <button type="submit">Submit</button>
     </form>
   </body>
