--- a/Views/view_all_contacts.cshtml
+++ b/Views/view_all_contacts.cshtml
@@ -7,6 +7,6 @@
 </ul>
 <p><a href="/">Add another contact</a></p>
 
-<!-- <form action="/tasks_cleared" method="post">
-  <button type="submit" name="button">Clear All Tasks</button>
-</form> -->
+<form action="/contacts_cleared" method="post">
+  <button type="submit" name="button">Clear All Contacts</button>
+</form>
