add property of address

--- a/Views/add_new_contact.cshtml
+++ b/Views/add_new_contact.cshtml
@@ -11,6 +11,8 @@
       <input id="new-name" name="new-name" type="text">
       <label for="new-number">Add your number</label>
       <input id="new-number" name="newNumber" type="number">
+      <label for="new-address">Add your address</label>
+      <input id="new-address" name="new-address" type="text">
       <button type="submit">Submit</button>
     </form>
   </body>
