add first page with add contact and view all contact properties

--- a/Views/contact_added.cshtml
+++ b/Views/contact_added.cshtml
@@ -1,4 +1,4 @@
 <h1>You've added a new contact!</h1>
 <p>Your name: @Model.GetName(), Your number: @Model.GetNumber(), Your address: @Model.GetAddress() </p>
-<p><a href="/">Add another contact</a></p>
+<p><a href="/first_page">Add another contact</a></p>
 <p><a href="/view_all_contacts">View current contacts</a></p>
