--- a/Views/view_all_contacts.cshtml
+++ b/Views/view_all_contacts.cshtml
@@ -5,7 +5,7 @@
     <li>Name: @contact.GetName(), Phoneumber: @contact.GetNumber(), Address: @contact.GetAddress()</li>
   }
 </ul>
-<p><a href="/">Add another contact</a></p>
+<p><a href="/first_page">Add another contact</a></p>
 <form action="/contacts_cleared" method="post">
   <button type="submit" name="button">Clear All Contacts</button>
 </form>
