rename the rout path name

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -1,2 +1,2 @@
 <p><a href="/view_all_contacts">View current contacts</a></p>
-<p><a href="/first_page">Add a new contact</a></p>
+<p><a href="/add_new_contact">Add a new contact</a></p>
